Fix error loading the PanamaContext without --enable-preview in tests.